--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
